<resources>
    <string name="app_name">Module</string>
    <string name="matrix">Matrix</string>
    <string name="animator">Animator</string>
    <string name="material_design">Material Design</string>
    <string name="canvas">Canvas</string>
    <string name="scroll">Scroll</string>
    <string name="attrs_style">AttrsStyle</string>
    <string name="crop_image">CropImage</string>
    <string name="annotation">Annotation</string>
    <string name="bitmap">Bitmap</string>
    <string name="progress_bar">ProgressBar</string>
    <string name="activity">Activity</string>
    <string name="view">View</string>
    <string name="ipc">进程间通信</string>
    <string name="thread">线程的使用</string>
    <string name="schedule">Schedule</string>
    <string name="test">测试</string>
    <string name="test1">测试页面一</string>
    <string name="test2">测试页面二</string>
    <string name="intent1">进程间通信intent1</string>
    <string name="intent2">进程间通信intent2</string>
    <string name="bitmap_compress">图片压缩</string>

    <!--通用 ↓-->
    <string name="base_operation">基本操作</string>
    <string name="reset">重置</string>
    <string name="color">颜色</string>
    <string name="please_click">请点击</string>

    <!--通用 ↑-->


    <!--权限 ↓-->
    <string name="permission_read_phone_state_refuse">您还没有打开本应用在手机设置中的读取设备信息权限，请先打开相应权限！</string>
    <string name="permission_call_phone_refuse">您还没有打开本应用在手机设置中的打电话权限，请先打开相应权限！</string>
    <string name="permission_location_refuse">您还没有打开本应用在手机设置中的定位权限，请先打开相应权限！</string>
    <string name="permission_record_refuse">您还没有打开本应用在手机设置中的录音权限，请先打开相应权限！</string>
    <string name="permission_sd_refuse">您还没有打开本应用在手机设置中的读写权限，请先打开相应权限！</string>
    <string name="permission_camera_refuse">您还没有打开本应用在手机设置中的拍照权限，请先打开相应权限！</string>
    <string name="permission_read_contacts_refuse">您还没有打开本应用在手机设置中的读取手机联系人权限，请先打开相应权限！</string>
    <string name="permission_read_calendar_refuse">您还没有打开本应用在手机设置中的读取日历权限，请先打开相应权限！</string>
    <string name="permission_body_sensors_refuse">您还没有打开本应用在手机设置中的传感器权限，请先打开相应权限！</string>
    <string name="permission_send_sms_refuse">您还没有打开本应用在手机设置中的发短信权限，请先打开相应权限！</string>
    <!--权限 ↑-->

    <!--Matrix ↓-->
    <string name="matrix_demonstration">Matrix操作演示</string>
    <string name="matrix_translate">Translate(平移)</string>
    <string name="matrix_scale">Scale(缩放)</string>
    <string name="matrix_rotate">Rotate(旋转)</string>
    <string name="matrix_skew">Skew(扭曲)</string>
    <!--Matrix ↑-->

    <string name="start_animator">开始动画</string>
    <string name="pause_animator">暂停动画</string>
    <string name="cancel_animator">取消动画</string>

    <!--Transition ↓-->
    <string name="transition">过渡动画</string>
    <string name="transition_base_use">基本使用</string>
    <string name="transition_add_target">指定动画执行者</string>
    <string name="transition_delay">延时动画</string>
    <string name="transition_custom_color">自定义颜色改变的过渡动画</string>
    <string name="transition_page_content">页面内容的过渡动画</string>
    <string name="transition_share_element">共享元素的过渡动画</string>
    <string name="transition_page_content_page_first">页面内容的过渡动画页面一</string>
    <string name="transition_page_content_page_second">页面内容的过渡动画页面二</string>
    <string name="transition_share_element_page_first">共享元素的过渡动画页面一</string>
    <string name="transition_share_element_page_second">共享元素的过渡动画页面二</string>
    <!--Transition ↑-->

    <!--Material ↓-->
    <string name="material_toolbar">Toolbar</string>
    <string name="material_toolbar_base_use">Toolbar的基本使用</string>
    <string name="material_snackbar">Snackbar</string>
    <string name="material_snackbar_base_use">Snackbar的基本使用</string>
    <string name="material_fab">FAB</string>
    <string name="material_fab_base_use">FloatingActionButton的基本使用</string>
    <string name="material_appbar">AppBar</string>
    <string name="material_appbar_base_use">AppBarLayout的使用</string>
    <string name="material_dialog">Dialog</string>
    <string name="material_bottom_sheet_dialog_base_use">BottomSheetDialog的基本使用</string>
    <string name="material_tablayout">Tab</string>
    <string name="material_tablayout_top">TabLayout顶部标签页</string>
    <string name="material_tablayout_bottom">TabLayout底部菜单页</string>
    <string name="material_recycler">Recycler</string>
    <string name="material_recycler_linear_vertical">RecyclerView Linear Vertical</string>
    <string name="material_recycler_linear_horizantal">RecyclerView Linear Horizantal</string>
    <string name="material_recycler_staggered">RecyclerView Staggered</string>
    <string name="material_recycler_grid">RecyclerView Grid</string>
    <string name="material_recycler_animation">RecyclerView Animation</string>
    <string name="material_recycler_header_footer">RecyclerView的刷新和自动加载添加头部和尾部</string>
    <string name="material_recycler_drag_swipe">RecyclerView的拖拽，侧滑</string>
    <string name="material_refresh">Refresh</string>
    <string name="material_swipe_refresh_base_use">SwipeRefreshLayout的简单使用</string>
    <string name="material_drawer">Drawer</string>
    <string name="material_drawer_base_use">DrawerLayout的基本使用</string>
    <string name="material_drawer_animator">DrawerLayout的title动画</string>
    <string name="material_search">Search</string>
    <string name="material_search_base_use">SearchView的基本使用</string>
    <string name="material_search_toolbar">SearchView和Toolbar的使用</string>
    <string name="material_input">Input</string>
    <string name="material_input_base_use">TextInputLayout的基本使用</string>
    <string name="material_palette">Palette</string>
    <string name="material_palette_base_use">Palette的基本使用</string>
    <!--Material ↑-->

    <string name="select_scroll_flag">请选择ScrollFlag</string>

    <string-array name="array_scroll_flag">
        <item>scroll</item>
        <item>enterAlways</item>
        <item>enterAlwaysCollapsed</item>
        <item>snap</item>
        <item>exitUntilCollapsed</item>
        <item>scroll_enterAlways</item>
        <item>scroll_enterAlways_enterAlwaysCollapsed</item>
        <item>scroll_exitUntilCollapsed</item>
        <item>scroll_snap</item>
    </string-array>

    <string-array name="ipc_type">
        <item>intent</item>
        <item>Messenger</item>
        <item>AIDL</item>
        <item>ContentProvider</item>
        <item>Socket</item>
        <item>文件</item>
        <item>SharedPreferences</item>
    </string-array>

    <string-array name="thread_type">
        <item>HandlerThread</item>
    </string-array>


    <string-array name="title">
        <item>title1</item>
        <item>title2</item>
        <item>title3</item>
    </string-array>

    <string name="menu_search">查找</string>
    <string name="menu_notifications">通知</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about_us">关于</string>
    <string name="item_01">Item 1</string>
    <string name="item_02">Item 2</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="array_item">
        <item>更新</item>
        <item>删除</item>
    </string-array>

    <!--ProgressBar ↓-->
    <string name="progressbar_horizontal">水平进度条</string>
    <!--ProgressBar ↑-->

    <!--Activity ↓-->
    <string name="activity_translate">透明Activity</string>
    <!--Activity ↑-->

    <!--View ↓-->
    <string name="view_text_view">TextView</string>
    <!--View ↑-->

    <!--Canvas ↓-->
    <string name="canvas_base_operation">基本操作</string>
    <string name="canvas_rect">矩形</string>
    <string name="canvas_rount_rect">圆角矩形</string>
    <string name="canvas_point">点</string>
    <string name="canvas_line">线</string>
    <string name="canvas_circle">圆</string>
    <string name="canvas_text">文字</string>
    <string name="canvas_oval">椭圆</string>
    <string name="canvas_arc">圆弧</string>
    <string name="canvas_bezier">贝塞尔曲线</string>
    <string name="canvas_two_order_bezier">二阶贝塞尔曲线</string>
    <string name="canvas_two_order_bezier_base_operation">二阶贝塞尔曲线基本使用</string>
    <string name="canvas_three_order_bezier">三阶塞尔曲线</string>
    <string name="canvas_drawing_board">画板</string>
    <string name="canvas_pic_synthesis">图片合成</string>
    <string name="canvas_circle_scroll">圆形滚动动效</string>
    <!--Canvas ↑-->

    <!--thread ↓-->
    <string name="thread_handler_thread">HandlerThread</string>
    <!--thread ↑-->

</resources>
