<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                style="@style/main_button"
                android:onClick="onClickMatrixMain"
                android:text="@string/matrix" />

            <Button
                style="@style/main_button"
                android:onClick="onClickAnimatorMain"
                android:text="@string/animator" />

            <Button
                style="@style/main_button"
                android:onClick="onClickMaterial"
                android:text="@string/material_design" />

            <Button
                style="@style/main_button"
                android:text="@string/canvas" />

            <Button
                style="@style/main_button"
                android:text="@string/scroll" />

            <Button
                style="@style/main_button"
                android:onClick="onClickAttrsStyle"
                android:text="@string/attrs_style" />

            <Button
                style="@style/main_button"
                android:text="@string/crop_image" />

            <Button
                style="@style/main_button"
                android:text="@string/annotation" />

            <Button
                style="@style/main_button"
                android:text="@string/bitmap" />

            <Button
                android:onClick="onClickProgressBar"
                style="@style/main_button"
                android:text="@string/progress_bar" />

            <Button
                style="@style/main_button"
                android:onClick="onClickTest"
                android:text="@string/test" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>